--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "pyservicenow"
+name = "pyqtauthentication"
 authors = [{name = "michaeldcanady"}]
 readme = "Readme.md"
 license = {file = "LICENSE"}
@@ -12,18 +12,22 @@ dynamic = ["version", "description"]
 requires-python = ">3.8.0"
 
 dependencies = [
+    "Markdown==3.4.1",
+    "PyQt6==6.3.1",
+    "PyQt6-Qt6==6.3.1",
+    "PyQt6-sip==13.4.0",
 ]
 
 [project.urls]
-homepage = "https://github.com/michaeldcanady/pyservicenow#readme"
-repository = "https://github.com/michaeldcanady/pyservicenow"
+homepage = "https://github.com/michaeldcanady/pyqtauthentication#readme"
+repository = "https://github.com/michaeldcanady/pyqtauthentication"
 
 [tool.flit.module]
-name = "pyservicenow"
+name = "pyqtauthentication"
 
 [tool.mypy]
 warn_unused_configs = true
-files = "pyservicenow"
+files = "pyqtauthentication"
 ignore_missing_imports = true
 
 [tool.yapf]
