--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "pyqtauthentication"
+name = "pyqtapplicationhelper"
 authors = [{name = "michaeldcanady"}]
 readme = "Readme.md"
 license = {file = "LICENSE"}
@@ -19,15 +19,15 @@ dependencies = [
 ]
 
 [project.urls]
-homepage = "https://github.com/michaeldcanady/pyqtauthentication#readme"
-repository = "https://github.com/michaeldcanady/pyqtauthentication"
+homepage = "https://github.com/michaeldcanady/pyqtapplicationhelper#readme"
+repository = "https://github.com/michaeldcanady/pyqtapplicationhelper"
 
 [tool.flit.module]
-name = "pyqtauthentication"
+name = "pyqtapplicationhelper"
 
 [tool.mypy]
 warn_unused_configs = true
-files = "pyqtauthentication"
+files = "pyqtapplicationhelper"
 ignore_missing_imports = true
 
 [tool.yapf]
