--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+      - name: Install requirements
+        run : |
+          pip install -r requirements.txt
       - name: Install flit
         run: |
           pip install flit
