--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+      - name: Install libGL
+        run: |
+          apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
       - name: Install requirements
         run : |
           pip install -r requirements.txt
